// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Row /> renders as compact 1`] = `
<div
  className="f1sxrx5i"
>
  <div
    className="fofkloz"
  >
    PRIMARY
  </div>
</div>
`;

exports[`<Row /> renders as spacious 1`] = `
<div
  className="fw51bp2"
>
  <div
    className="fofkloz"
  >
    PRIMARY
  </div>
</div>
`;

exports[`<Row /> renders in middle 1`] = `
<div
  className="fddsvlq"
>
  <div
    className="fofkloz"
  >
    PRIMARY
  </div>
</div>
`;

exports[`<Row /> renders with a baseline 1`] = `
<div
  className="f1rw3cjs"
>
  <div
    className="fofkloz"
  >
    PRIMARY
  </div>
</div>
`;

exports[`<Row /> renders with a topline 1`] = `
<div
  className="ffhgvv0"
>
  <div
    className="fofkloz"
  >
    PRIMARY
  </div>
</div>
`;
